# simplex

./: .clang-format  .gitignore  CMakeLists.txt  bootstrap_and_build_relwithdebinfo_prerelease.bat  bootstrap_relwithdebinfo_develop.bat  readme.md
assets/example-newton-fractal/fractal/: fragment.glsl  vertex.glsl
assets/example-raycast/heightmap/: fragment.glsl  vertex.glsl
assets/example-raycast/raycast/: fragment.glsl
assets/example-raycast/raymarch/: fragment.glsl  objects.glsl  vertex.glsl
assets/example-raycast/skybox/: fragment.glsl  vertex.glsl
assets/example-raycast/standard/: fragment.glsl  vertex.glsl
assets/test-simple/simple/: vertex.glsl
bootstrap/: CMakeLists.txt
bootstrap/cmake/modules/: GetBoost.cmake  GetEasylogging.cmake  GetGLEW.cmake  GetGLM.cmake  GetSOIL.cmake
cmake/modules/: BuildHelpers.cmake  CompilerFlags.cmake  FindEasylogging.cmake  FindGLM.cmake  GroupInVisualStudio.cmake  MagicAssets.cmake
doxygen/: Doxyfile.in
src/: CMakeLists.txt
src/example-newton-fractal/: CMakeLists.txt  main.cpp  polynom.cpp  polynom.hpp
src/example-raycast/: CMakeLists.txt  main.cpp
src/simplex/: CMakeLists.txt  config.hpp.in  simplex.hpp
src/simplex/application/: application.hpp  clock.cpp  clock.hpp  keycode.hpp  program_arguments.cpp  program_arguments.hpp  single_window_application.cpp  single_window_application.hpp
src/simplex/assets/: asset_loader.hpp  filesystem_asset_loader.cpp  filesystem_asset_loader.hpp  magic_asset_loader.hpp
src/simplex/drawable/: asset_aware.hpp  asset_manager.hpp  asset_shader_source.cpp  asset_shader_source.hpp  drawable.hpp  drawable_manager.cpp  drawable_manager.hpp  memory_shader_source.cpp  memory_shader_source.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  shader_source.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  uniform_object.hpp
src/simplex/drawable/world3d/: sun.cpp  (+5 more)
src/simplex/error/: application_error.hpp  asset_not_found_error.hpp  cyclic_dependeny_error.hpp  shader_error.hpp  simplex_error.hpp  system_error.hpp
src/simplex/window/: window.cpp  window.hpp
src/test-simple/: CMakeLists.txt  main.cpp
(+21 files in other folders)
