
CMAKE_MINIMUM_REQUIRED( VERSION 3.1 )

PROJECT( Simplex )

SET( VERSION_MAJOR   0   CACHE STRING "Project major version number." )
SET( VERSION_MINOR   0   CACHE STRING "Project minor version number." )
SET( VERSION_PATCH   1   CACHE STRING "Project patch version number." )
MARK_AS_ADVANCED( VERSION_MAJOR VERSION_MINOR VERSION_PATCH )

SET( CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH} )

ADD_DEFINITIONS(-D_UNICODE -DUNICODE)

INCLUDE( GroupInVisualStudio )
INCLUDE( BuildHelpers )
INCLUDE( CompilerFlags )
INCLUDE( MagicAssets )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/build/bin )

FIND_PACKAGE( Doxygen )
IF( DOXYGEN_FOUND )
  CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/doxygen/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY )
  ADD_CUSTOM_TARGET( doc
    ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating API documentation with Doxygen" VERBATIM
  )
ENDIF( DOXYGEN_FOUND )

# TARGET DEFINITION

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
LIST(
	APPEND LIBS 
	${OPENGL_LIBRARIES}
	)
	
INCLUDE( FindEasylogging )
FIND_PACKAGE( EASYLOGGING REQUIRED )
INCLUDE_DIRECTORIES( "${EASYLOGGING_INCLUDE_DIR}" )

INCLUDE( FindBoost )
FIND_PACKAGE( Boost REQUIRED COMPONENTS date_time filesystem iostreams system)
INCLUDE_DIRECTORIES( "${Boost_INCLUDE_DIR}" )
ADD_DEFINITIONS("-DBOOST_ALL_NO_LIB") # disable autolinking, it tries to find wrong files
LIST(
	APPEND LIBS 
	${Boost_LIBRARIES}
	)
	
INCLUDE( FindGLM )
FIND_PACKAGE( GLM REQUIRED )
INCLUDE_DIRECTORIES( "${GLM_INCLUDE_DIR}" )


INCLUDE( FindGLEW )
FIND_PACKAGE( GLEW REQUIRED )
INCLUDE_DIRECTORIES( "${GLEW_INCLUDE_DIR}" )
add_definitions( -DGLEW_STATIC )
LIST(
	APPEND LIBS 
	${GLEW_LIBRARY}
	)
	
ADD_SUBDIRECTORY( src bin )

# packaging
#SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
SET(CPACK_GENERATOR "ZIP")
INCLUDE( CPack )
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${PROJECT_SOURCE_DIR}/install")